ingress.yaml
apiVersion: networking.k8s.io/v1                                                
kind: Ingress                                                                      
metadata:                                                                          
  name: nginxapp1-ingress-service                                               
  namespace: dev                                                              
  annotations:                                                                  
    kubernetes.io/ingress.class: nginx                                          
    nginx.ingress.kubernetes.io/use-regex: "true"                               
spec:                                                                           
  rules:                                                                        
  - http:                                                                       
      paths:                                                                    
      - path: /(*)                                                              
        pathType: Prefix                                                        
        backend:                                                                
          service:                                                              
            name: frontend                                           
            port:                                                               
              number: 80
